--- a/Leaflet-Step-2/static/css/style.css
+++ b/Leaflet-Step-2/static/css/style.css
@@ -8,3 +8,26 @@ body,
 html {
   height: 100%;
 }
+
+.header {
+  text-align: center;
+}
+
+.legendInfo {
+  text-align:left;
+  background: white;
+  padding: 5px 10px 5px 10px;
+  border-radius:2px;
+  height:130px;
+}
+
+.legendInfo i {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  position:relative;
+  top:5px
+}
+.legendItem {
+  position:relative;
+}
